# cpp-modules-experiments

./: .gitignore  archlinux-clang-cmake-cpp20.Dockerfile
case_001/app/: main.cpp
case_001/hello/: CMakeLists.txt  hello.ixx
case_002/app/: CMakeLists.txt
case_002/hello/: CMakeLists.txt  hello.cxx  hello.ixx  helper-a.cxx  helper-b.cxx
case_003/: CMakeLists.txt
case_003/hello/: CMakeLists.txt  hello.ixx  helper.decl.ixx  helper.impl.a.ixx  helper.impl.b.ixx
